@@ -684,8 +684,9 @@
             <command>
                 <option>diskiograph</option>
             </command>
-            <option>(device) ("normal"|"log") (height),(width) (gradient
-            colour 1) (gradient colour 2) (scale)</option>
+            <option>(device) ("normal"|"log") (height),(width)
+            (gradient colour 1) (gradient colour 2)
+            (scale)</option>
         </term>
         <listitem>Disk IO graph, colours defined in hex, minus the
         #. If scale is non-zero, it becomes the scale for the
@@ -698,8 +699,9 @@
             <command>
                 <option>diskiograph_read</option>
             </command>
-            <option>(device) ("normal"|"log") (height),(width) (gradient
-            colour 1) (gradient colour 2) (scale)</option>
+            <option>(device) ("normal"|"log") (height),(width)
+            (gradient colour 1) (gradient colour 2)
+            (scale)</option>
         </term>
         <listitem>Disk IO graph for reads, colours defined in hex,
         minus the #. If scale is non-zero, it becomes the scale for
@@ -713,8 +715,9 @@
             <command>
                 <option>diskiograph_write</option>
             </command>
-            <option>(device) ("normal"|"log") (height),(width) (gradient
-            colour 1) (gradient colour 2) (scale)</option>
+            <option>(device) ("normal"|"log") (height),(width)
+            (gradient colour 1) (gradient colour 2)
+            (scale)</option>
         </term>
         <listitem>Disk IO graph for writes, colours defined in hex,
         minus the #. If scale is non-zero, it becomes the scale for
@@ -748,8 +751,9 @@
             <command>
                 <option>downspeedgraph</option>
             </command>
-            <option>(netdev) ("normal"|"log") (height),(width) (gradient
-				colour 1) (gradient colour 2) (scale)</option>
+            <option>(netdev) ("normal"|"log") (height),(width)
+            (gradient colour 1) (gradient colour 2)
+            (scale)</option>
         </term>
         <listitem>Download speed graph, colours defined in hex,
         minus the #. If scale is non-zero, it becomes the scale for
@@ -1737,11 +1741,9 @@
             <command>
                 <option>lua_graph</option>
             </command>
-			<option>
-				function_name (function parameters)
-				("normal"|"log") (height),(width) (gradient
-				colour 1) (gradient colour 2) (scale)
-			</option>
+            <option>function_name (function parameters)
+            ("normal"|"log") (height),(width) (gradient colour 1)
+            (gradient colour 2) (scale)</option>
         </term>
         <listitem>Executes a Lua function with given parameters and
         draws a graph. Expects result value to be any number, and
@@ -3005,8 +3007,9 @@
             <command>
                 <option>upspeedgraph</option>
             </command>
-            <option>(netdev) ("normal"|"log") (height),(width) (gradient
-            colour 1) (gradient colour 2) (scale)</option>
+            <option>(netdev) ("normal"|"log") (height),(width)
+            (gradient colour 1) (gradient colour 2)
+            (scale)</option>
         </term>
         <listitem>Upload speed graph, colours defined in hex, minus
         the #. If scale is non-zero, it becomes the scale for the
